@@ -33,14 +33,18 @@ buildscript {
 }
 
 wrapper {
-    gradleVersion = '6.8.1'
+    gradleVersion = '9.4.1'
 }
 
-apply from: "build-${profile}.gradle"
+def resolve(String name) {
+    return (findProperty(name) ?: System.getenv(name))
+}
+
+apply from: "build-${resolve('profile')}.gradle"
 apply plugin: 'idea'
 apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'groovy'
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'jacoco'
 
@@ -48,36 +52,26 @@ configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.sourceCompatibility = JavaVersion.VERSION_1_8
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.targetCompatibility = JavaVersion.VERSION_1_8
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.options*.release = 8
+}
+[compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.options*.encoding = 'UTF-8'
 
 group = ext.mainGroup
 version = ext.mainVersion + (ext.snapshot ? '-SNAPSHOT' : '')
 
 repositories {
+    mavenCentral()
     maven {
-        url "${artifactory_contextUrl}/libs-${project.ext.snapshot ? 'all-local' : 'release'}"
+        url = uri("${resolve("repos_url")}/${((rootProject.ext.snapshot) ? "snapshots" : "releases")}")
         credentials {
-            username = 'public-reader'
-            password = 'Public-reader_123'
+            username "${resolve('repos_user')}"
+            password "${resolve('repos_password')}"
         }
     }
-    mavenCentral()
     mavenLocal()
-}
-
-idea {
-    project {
-        jdkName = '1.8'
-        languageLevel = JavaVersion.VERSION_1_8
-    }
-    module {
-        downloadJavadoc = false
-        downloadSources = false
-        inheritOutputDirs = true
-        excludeDirs += file('gradle')
-        excludeDirs += file('out')
-    }
 }
 
 def propName = rootProject.name
@@ -111,66 +105,64 @@ javadoc {
     failOnError = false
     options.encoding = 'utf-8'
 }
-tasks.create(name: 'javadocJar', type: Jar, dependsOn: 'javadoc') {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
+java {
+    withSourcesJar()
+    withJavadocJar()
 }
-tasks.create(name: 'sourceJar', type: Jar) {
-    from sourceSets.main.allJava
-}
-
-artifacts {
-    archives javadocJar
-    archives sourceJar
-}
-
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-
-            artifact javadocJar {
-                classifier 'javadoc'
-            }
-            artifact sourceJar {
-                classifier 'sources'
+    repositories {
+        maven {
+            url = uri("${resolve("repos_url")}/${((rootProject.ext.snapshot) ? "snapshots" : "releases")}")
+            credentials {
+                username = resolve("repos_user")
+                password = resolve("repos_password")
             }
         }
     }
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
+ext {
+    jacksonVersion = "2.14.1"
 }
 dependencies {
-    compile "com.es.lib:common-lib:1.3.0${project.ext.snapshot ? '-SNAPSHOT' : ''}"
+    api "com.es.lib:common-lib:1.3.0${project.ext.snapshot ? '-SNAPSHOT' : ''}"
 
-    compile "com.fasterxml.jackson.core:jackson-databind:2.9.9.2"
-    compile "com.fasterxml.jackson.core:jackson-annotations:2.9.9"
-    compile "org.hibernate:hibernate-entitymanager:5.1.12.Final"
-    compile "org.hibernate:hibernate-core:5.1.12.Final"
+    api "com.fasterxml.jackson.core:jackson-databind:2.9.9.2"
+    api "com.fasterxml.jackson.core:jackson-annotations:2.9.9"
+    api "org.hibernate:hibernate-entitymanager:5.1.12.Final"
+    api "org.hibernate:hibernate-core:5.1.12.Final"
 
     compileOnly "org.postgresql:postgresql:42.2.9"
-    compileOnly "org.projectlombok:lombok:1.18.10"
-    annotationProcessor "org.projectlombok:lombok:1.18.10"
+    compileOnly "org.projectlombok:lombok:1.18.44"
+    annotationProcessor "org.projectlombok:lombok:1.18.44"
 
-    testCompile "org.spockframework:spock-core:2.3-groovy-4.0"
-
-    testCompile "org.testcontainers:spock:1.15.3"
-    testCompile "org.testcontainers:postgresql:1.15.3"
-    testCompile "org.postgresql:postgresql:42.2.9"
-    testCompileOnly "org.projectlombok:lombok:1.18.10"
-    testAnnotationProcessor "org.projectlombok:lombok:1.18.10"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+    testImplementation "org.spockframework:spock-core:2.3-groovy-4.0"
+    testImplementation "org.testcontainers:spock:1.15.3"
+    testImplementation "org.testcontainers:postgresql:1.15.3"
+    testImplementation "org.postgresql:postgresql:42.2.9"
+    testImplementation 'javax.xml.bind:jaxb-api:2.3.1'
+    testCompileOnly "org.projectlombok:lombok:1.18.44"
+    testAnnotationProcessor "org.projectlombok:lombok:1.18.44"
 }
 
-def sonarAvailable = properties['sonar_url'] != null && properties['sonar_user'] != null && properties['sonar_password'] != null
+def sonarAvailable = resolve('sonar_url') != null && resolve('sonar_user') != null && resolve('sonar_password') != null
 if (sonarAvailable) {
     apply plugin: 'org.sonarqube'
     sonarqube {
         properties {
-            property "sonar.host.url", "${sonar_url}"
-            property "sonar.login", "${sonar_user}"
-            property "sonar.password", "${sonar_password}"
+            property "sonar.host.url", resolve('sonar_url')
+            property "sonar.login", resolve('sonar_user')
+            property "sonar.password", resolve('sonar_password')
         }
     }
 }
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
